Check excluded Nodes
Signed-off-by: Lehmann_Fabian <fabian.lehmann@informatik.hu-berlin.de>